# langdata

./: .gitignore  README.md  pyproject.toml
langdata/: __init__.py
langdata/resources/: countries.json  languages.json
